[package]
name = "fixparser"
version = "0.1.2"
authors = ["Juan Eugenio Abadie <juaneabadie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust library to parse FIX messages."
documentation = "https://docs.rs/fixparser"
homepage = "https://github.com/whoan/fixparser"
repository = "https://github.com/whoan/fixparser"
readme = "readme.md"
keywords = ["fixprotocol", "parser", "json"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
debugging = []
