[package]
name = "fixparser"
version = "0.1.4"
authors = ["Juan Eugenio Abadie <juaneabadie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust/WASM library to parse FIX messages."
documentation = "https://docs.rs/fixparser"
homepage = "https://github.com/whoan/fixparser"
repository = "https://github.com/whoan/fixparser"
readme = "readme.md"
keywords = ["fix", "fix-parser", "fix-protocol", "json", "wasm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debugging = []
